Create a single Java proto library for core R4 resources.
PiperOrigin-RevId: 308991837

--- a/proto/r4/core/resources/BUILD
+++ b/proto/r4/core/resources/BUILD
@@ -6,161 +6,163 @@ package(
 
 licenses(["notice"])
 
+PROTO_DEPS = [
+    ":account_proto",
+    ":activity_definition_proto",
+    ":adverse_event_proto",
+    ":allergy_intolerance_proto",
+    ":appointment_proto",
+    ":appointment_response_proto",
+    ":audit_event_proto",
+    ":basic_proto",
+    ":binary_proto",
+    ":biologically_derived_product_proto",
+    ":body_structure_proto",
+    ":capability_statement_proto",
+    ":care_plan_proto",
+    ":care_team_proto",
+    ":catalog_entry_proto",
+    ":charge_item_definition_proto",
+    ":charge_item_proto",
+    ":claim_proto",
+    ":claim_response_proto",
+    ":clinical_impression_proto",
+    ":code_system_proto",
+    ":communication_proto",
+    ":communication_request_proto",
+    ":compartment_definition_proto",
+    ":composition_proto",
+    ":concept_map_proto",
+    ":condition_proto",
+    ":consent_proto",
+    ":contract_proto",
+    ":coverage_eligibility_request_proto",
+    ":coverage_eligibility_response_proto",
+    ":coverage_proto",
+    ":detected_issue_proto",
+    ":device_definition_proto",
+    ":device_metric_proto",
+    ":device_proto",
+    ":device_request_proto",
+    ":device_use_statement_proto",
+    ":diagnostic_report_proto",
+    ":document_manifest_proto",
+    ":document_reference_proto",
+    ":effect_evidence_synthesis_proto",
+    ":encounter_proto",
+    ":endpoint_proto",
+    ":enrollment_request_proto",
+    ":enrollment_response_proto",
+    ":episode_of_care_proto",
+    ":event_definition_proto",
+    ":evidence_proto",
+    ":evidence_variable_proto",
+    ":example_scenario_proto",
+    ":explanation_of_benefit_proto",
+    ":family_member_history_proto",
+    ":flag_proto",
+    ":goal_proto",
+    ":graph_definition_proto",
+    ":group_proto",
+    ":guidance_response_proto",
+    ":healthcare_service_proto",
+    ":imaging_study_proto",
+    ":immunization_evaluation_proto",
+    ":immunization_proto",
+    ":immunization_recommendation_proto",
+    ":implementation_guide_proto",
+    ":insurance_plan_proto",
+    ":invoice_proto",
+    ":library_proto",
+    ":linkage_proto",
+    ":list_proto",
+    ":location_proto",
+    ":measure_proto",
+    ":measure_report_proto",
+    ":media_proto",
+    ":medication_administration_proto",
+    ":medication_dispense_proto",
+    ":medication_knowledge_proto",
+    ":medication_proto",
+    ":medication_request_proto",
+    ":medication_statement_proto",
+    ":medicinal_product_authorization_proto",
+    ":medicinal_product_contraindication_proto",
+    ":medicinal_product_indication_proto",
+    ":medicinal_product_ingredient_proto",
+    ":medicinal_product_interaction_proto",
+    ":medicinal_product_manufactured_proto",
+    ":medicinal_product_packaged_proto",
+    ":medicinal_product_pharmaceutical_proto",
+    ":medicinal_product_proto",
+    ":medicinal_product_undesirable_effect_proto",
+    ":message_definition_proto",
+    ":message_header_proto",
+    ":metadata_resource_proto",
+    ":molecular_sequence_proto",
+    ":naming_system_proto",
+    ":nutrition_order_proto",
+    ":observation_definition_proto",
+    ":observation_proto",
+    ":operation_definition_proto",
+    ":operation_outcome_proto",
+    ":organization_affiliation_proto",
+    ":organization_proto",
+    ":parameters_proto",
+    ":patient_proto",
+    ":payment_notice_proto",
+    ":payment_reconciliation_proto",
+    ":person_proto",
+    ":plan_definition_proto",
+    ":practitioner_proto",
+    ":practitioner_role_proto",
+    ":procedure_proto",
+    ":provenance_proto",
+    ":questionnaire_proto",
+    ":questionnaire_response_proto",
+    ":related_person_proto",
+    ":request_group_proto",
+    ":research_definition_proto",
+    ":research_element_definition_proto",
+    ":research_study_proto",
+    ":research_subject_proto",
+    ":risk_assessment_proto",
+    ":risk_evidence_synthesis_proto",
+    ":schedule_proto",
+    ":search_parameter_proto",
+    ":service_request_proto",
+    ":slot_proto",
+    ":specimen_definition_proto",
+    ":specimen_proto",
+    ":structure_definition_proto",
+    ":structure_map_proto",
+    ":subscription_proto",
+    ":substance_nucleic_acid_proto",
+    ":substance_polymer_proto",
+    ":substance_protein_proto",
+    ":substance_proto",
+    ":substance_reference_information_proto",
+    ":substance_source_material_proto",
+    ":substance_specification_proto",
+    ":supply_delivery_proto",
+    ":supply_request_proto",
+    ":task_proto",
+    ":terminology_capabilities_proto",
+    ":test_report_proto",
+    ":test_script_proto",
+    ":value_set_proto",
+    ":verification_result_proto",
+    ":vision_prescription_proto",
+    "@com_google_protobuf//:any_proto",
+    "//proto:annotations_proto",
+    "//proto/r4/core:codes_proto",
+    "//proto/r4/core:datatypes_proto",
+    "//proto/r4/core:valuesets_proto",
+]
+
 fhir_proto_library(
     srcs = ["bundle_and_contained_resource.proto"],
-    proto_deps = [
-        ":account_proto",
-        ":activity_definition_proto",
-        ":adverse_event_proto",
-        ":allergy_intolerance_proto",
-        ":appointment_proto",
-        ":appointment_response_proto",
-        ":audit_event_proto",
-        ":basic_proto",
-        ":binary_proto",
-        ":biologically_derived_product_proto",
-        ":body_structure_proto",
-        ":capability_statement_proto",
-        ":care_plan_proto",
-        ":care_team_proto",
-        ":catalog_entry_proto",
-        ":charge_item_definition_proto",
-        ":charge_item_proto",
-        ":claim_proto",
-        ":claim_response_proto",
-        ":clinical_impression_proto",
-        ":code_system_proto",
-        ":communication_proto",
-        ":communication_request_proto",
-        ":compartment_definition_proto",
-        ":composition_proto",
-        ":concept_map_proto",
-        ":condition_proto",
-        ":consent_proto",
-        ":contract_proto",
-        ":coverage_eligibility_request_proto",
-        ":coverage_eligibility_response_proto",
-        ":coverage_proto",
-        ":detected_issue_proto",
-        ":device_definition_proto",
-        ":device_metric_proto",
-        ":device_proto",
-        ":device_request_proto",
-        ":device_use_statement_proto",
-        ":diagnostic_report_proto",
-        ":document_manifest_proto",
-        ":document_reference_proto",
-        ":effect_evidence_synthesis_proto",
-        ":encounter_proto",
-        ":endpoint_proto",
-        ":enrollment_request_proto",
-        ":enrollment_response_proto",
-        ":episode_of_care_proto",
-        ":event_definition_proto",
-        ":evidence_proto",
-        ":evidence_variable_proto",
-        ":example_scenario_proto",
-        ":explanation_of_benefit_proto",
-        ":family_member_history_proto",
-        ":flag_proto",
-        ":goal_proto",
-        ":graph_definition_proto",
-        ":group_proto",
-        ":guidance_response_proto",
-        ":healthcare_service_proto",
-        ":imaging_study_proto",
-        ":immunization_evaluation_proto",
-        ":immunization_proto",
-        ":immunization_recommendation_proto",
-        ":implementation_guide_proto",
-        ":insurance_plan_proto",
-        ":invoice_proto",
-        ":library_proto",
-        ":linkage_proto",
-        ":list_proto",
-        ":location_proto",
-        ":measure_proto",
-        ":measure_report_proto",
-        ":media_proto",
-        ":medication_administration_proto",
-        ":medication_dispense_proto",
-        ":medication_knowledge_proto",
-        ":medication_proto",
-        ":medication_request_proto",
-        ":medication_statement_proto",
-        ":medicinal_product_authorization_proto",
-        ":medicinal_product_contraindication_proto",
-        ":medicinal_product_indication_proto",
-        ":medicinal_product_ingredient_proto",
-        ":medicinal_product_interaction_proto",
-        ":medicinal_product_manufactured_proto",
-        ":medicinal_product_packaged_proto",
-        ":medicinal_product_pharmaceutical_proto",
-        ":medicinal_product_proto",
-        ":medicinal_product_undesirable_effect_proto",
-        ":message_definition_proto",
-        ":message_header_proto",
-        ":metadata_resource_proto",
-        ":molecular_sequence_proto",
-        ":naming_system_proto",
-        ":nutrition_order_proto",
-        ":observation_definition_proto",
-        ":observation_proto",
-        ":operation_definition_proto",
-        ":operation_outcome_proto",
-        ":organization_affiliation_proto",
-        ":organization_proto",
-        ":parameters_proto",
-        ":patient_proto",
-        ":payment_notice_proto",
-        ":payment_reconciliation_proto",
-        ":person_proto",
-        ":plan_definition_proto",
-        ":practitioner_proto",
-        ":practitioner_role_proto",
-        ":procedure_proto",
-        ":provenance_proto",
-        ":questionnaire_proto",
-        ":questionnaire_response_proto",
-        ":related_person_proto",
-        ":request_group_proto",
-        ":research_definition_proto",
-        ":research_element_definition_proto",
-        ":research_study_proto",
-        ":research_subject_proto",
-        ":risk_assessment_proto",
-        ":risk_evidence_synthesis_proto",
-        ":schedule_proto",
-        ":search_parameter_proto",
-        ":service_request_proto",
-        ":slot_proto",
-        ":specimen_definition_proto",
-        ":specimen_proto",
-        ":structure_definition_proto",
-        ":structure_map_proto",
-        ":subscription_proto",
-        ":substance_nucleic_acid_proto",
-        ":substance_polymer_proto",
-        ":substance_protein_proto",
-        ":substance_proto",
-        ":substance_reference_information_proto",
-        ":substance_source_material_proto",
-        ":substance_specification_proto",
-        ":supply_delivery_proto",
-        ":supply_request_proto",
-        ":task_proto",
-        ":terminology_capabilities_proto",
-        ":test_report_proto",
-        ":test_script_proto",
-        ":value_set_proto",
-        ":verification_result_proto",
-        ":vision_prescription_proto",
-        "@com_google_protobuf//:any_proto",
-        "//proto:annotations_proto",
-        "//proto/r4/core:codes_proto",
-        "//proto/r4/core:datatypes_proto",
-        "//proto/r4/core:valuesets_proto",
-    ],
+    proto_deps = PROTO_DEPS,
     proto_library_prefix = "bundle_and_contained_resource",
 )
 
@@ -1946,4 +1948,12 @@ filegroup(
     srcs = glob([
         "*.proto",
     ]),
+)
+
+# Generate a proto library that includes all core resources for distributing as a maven jar.
+# No bazel targets should ever depend on this.
+fhir_proto_library(
+    proto_deps = PROTO_DEPS + [":bundle_and_contained_resource_proto"],
+    proto_library_prefix = "all",
+    visibility = ["//visibility:private"],
 )
