Add support for FHIRPath's upper(), lower(), and replace() functions.
PiperOrigin-RevId: 311050011

--- a/cc/google/fhir/fhir_path/BUILD
+++ b/cc/google/fhir/fhir_path/BUILD
@@ -54,6 +54,7 @@ cc_library(
         "@com_google_absl//absl/time",
         "@com_google_absl//absl/types:optional",
         "@com_google_protobuf//:protobuf",
+        "@icu//:common",
         "@org_tensorflow//tensorflow/core:lib",
     ],
 )
