--- a/py/google/fhir/seqex/BUILD
+++ b/py/google/fhir/seqex/BUILD
@@ -28,6 +28,7 @@ pyx_library(
     py_deps = [
         "@org_tensorflow//tensorflow/core:protos_all_py",
     ],
+    srcs_version = "PY3",
     deps = [
         "//cc/google/fhir/seqex:bundle_to_seqex_converter",
         "//cc/google/fhir/seqex:text_tokenizer",
@@ -67,6 +68,7 @@ pyx_library(
     py_deps = [
         "//proto/stu3:extensions_py_pb2",
     ],
+    srcs_version = "PY3",
     deps = [
         "//cc/google/fhir/seqex:bundle_to_seqex_util",
         "//proto/stu3:extensions_cc_proto",
@@ -93,6 +95,7 @@ py_library(
     srcs = [
         "bundle_to_seqex.py",
     ],
+    srcs_version = "PY3",
     deps = [
         ":bundle_seqex_converter",
         ":bundle_to_seqex_util",
