Fixes some incorrect BUILD paths
PiperOrigin-RevId: 316782585

--- a/go/google/fhir/jsonformat/BUILD
+++ b/go/google/fhir/jsonformat/BUILD
@@ -18,13 +18,13 @@ go_library(
     ],
     importpath = "google/fhir/jsonformat/jsonformat",
     deps = [
-        "//go/google/fhir/jsonformat/internal/accessor",
-        "//go/google/fhir/jsonformat/internal/jsonpbhelper",
         "@com_bitbucket_creachadair_stringset//:go_default_library",
         "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_golang_protobuf//ptypes:go_default_library_gen",
         "@com_github_json_iterator_go//:go_default_library",
         "@com_github_vitessio//go/jsonutil:go_default_library",
+        "@com_google_fhir//go/google/fhir/jsonformat/internal/accessor",
+        "@com_google_fhir//go/google/fhir/jsonformat/internal/jsonpbhelper",
         "@com_google_fhir//proto:annotations_go_proto",
         "@com_google_fhir//proto/r4:google_extensions_go_proto",
         "@com_google_fhir//proto/r4/core:datatypes_go_proto",
@@ -48,10 +48,10 @@ go_test(
     ],
     embed = [":jsonformat"],
     deps = [
-        "//go/google/fhir/jsonformat/internal/accessor",
-        "//go/google/fhir/jsonformat/internal/jsonpbhelper",
         "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_google_go_cmp//cmp:go_default_library",
+        "@com_google_fhir//go/google/fhir/jsonformat/internal/accessor",
+        "@com_google_fhir//go/google/fhir/jsonformat/internal/jsonpbhelper",
         "@com_google_fhir//proto:annotations_go_proto",
         "@com_google_fhir//proto/r4:google_extensions_go_proto",
         "@com_google_fhir//proto/r4/core:datatypes_go_proto",
@@ -71,10 +71,10 @@ go_test(
     ],
     embed = [":jsonformat"],
     deps = [
-        "//go/google/fhir/jsonformat/internal/jsonpbhelper",
         "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_golang_protobuf//ptypes:go_default_library_gen",
         "@com_github_google_go_cmp//cmp:go_default_library",
+        "@com_google_fhir//go/google/fhir/jsonformat/internal/jsonpbhelper",
         "@com_google_fhir//proto/r4/core:codes_go_proto",
         "@com_google_fhir//proto/r4/core:datatypes_go_proto",
         "@com_google_fhir//proto/r4/core/resources:bundle_and_contained_resource_go_proto",
