--- a/go/google/fhir/jsonformat/test/BUILD
+++ b/go/google/fhir/jsonformat/test/BUILD
@@ -17,17 +17,17 @@ go_test(
         "//testdata/stu3:examples",
     ],
     deps = [
+        "//go/google/fhir/jsonformat",
+        "//go/google/fhir/jsonformat/internal/jsonpbhelper",
+        "//go/google/fhir/jsonformat/internal/protopath",
+        "//proto/r4/core/resources:bundle_and_contained_resource_go_proto",
+        "//proto/r4/core/resources:composition_go_proto",
+        "//proto/r4/core/resources:observation_go_proto",
+        "//proto/r4/core/resources:patient_go_proto",
+        "//proto/stu3:resources_go_proto",
         "@com_bitbucket_creachadair_stringset//:go_default_library",
         "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_google_go_cmp//cmp:go_default_library",
-        "@com_google_fhir//go/google/fhir/jsonformat",
-        "@com_google_fhir//go/google/fhir/jsonformat/internal/jsonpbhelper",
-        "@com_google_fhir//go/google/fhir/jsonformat/internal/protopath",
-        "@com_google_fhir//proto/r4/core/resources:bundle_and_contained_resource_go_proto",
-        "@com_google_fhir//proto/r4/core/resources:composition_go_proto",
-        "@com_google_fhir//proto/r4/core/resources:observation_go_proto",
-        "@com_google_fhir//proto/r4/core/resources:patient_go_proto",
-        "@com_google_fhir//proto/stu3:resources_go_proto",
         "@io_bazel_rules_go//go/tools/bazel:go_default_library",
         "@org_golang_google_protobuf//testing/protocmp:go_default_library",
     ],
@@ -46,7 +46,7 @@ go_test(
         ":testdata",
     ],
     deps = [
-        "@com_google_fhir//go/google/fhir/jsonformat",
+        "//go/google/fhir/jsonformat",
         "@io_bazel_rules_go//go/tools/bazel:go_default_library",
     ],
 )
