--- a/go/google/fhir/jsonformat/BUILD
+++ b/go/google/fhir/jsonformat/BUILD
@@ -18,20 +18,20 @@ go_library(
     ],
     importpath = "google/fhir/jsonformat/jsonformat",
     deps = [
+        "//go/google/fhir/jsonformat/internal/accessor",
+        "//go/google/fhir/jsonformat/internal/jsonpbhelper",
+        "//proto:annotations_go_proto",
+        "//proto/r4:google_extensions_go_proto",
+        "//proto/r4/core:datatypes_go_proto",
+        "//proto/r4/core/resources:bundle_and_contained_resource_go_proto",
+        "//proto/stu3:datatypes_go_proto",
+        "//proto/stu3:extensions_go_proto",
+        "//proto/stu3:resources_go_proto",
         "@com_bitbucket_creachadair_stringset//:go_default_library",
         "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_golang_protobuf//ptypes:go_default_library_gen",
         "@com_github_json_iterator_go//:go_default_library",
         "@com_github_vitessio//go/jsonutil:go_default_library",
-        "@com_google_fhir//go/google/fhir/jsonformat/internal/accessor",
-        "@com_google_fhir//go/google/fhir/jsonformat/internal/jsonpbhelper",
-        "@com_google_fhir//proto:annotations_go_proto",
-        "@com_google_fhir//proto/r4:google_extensions_go_proto",
-        "@com_google_fhir//proto/r4/core:datatypes_go_proto",
-        "@com_google_fhir//proto/r4/core/resources:bundle_and_contained_resource_go_proto",
-        "@com_google_fhir//proto/stu3:datatypes_go_proto",
-        "@com_google_fhir//proto/stu3:extensions_go_proto",
-        "@com_google_fhir//proto/stu3:resources_go_proto",
         "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
         "@org_golang_google_protobuf//types/descriptorpb:go_default_library",
         "@org_golang_google_protobuf//types/known/anypb:go_default_library",
@@ -48,15 +48,15 @@ go_test(
     ],
     embed = [":jsonformat"],
     deps = [
+        "//go/google/fhir/jsonformat/internal/accessor",
+        "//go/google/fhir/jsonformat/internal/jsonpbhelper",
+        "//proto:annotations_go_proto",
+        "//proto/r4:google_extensions_go_proto",
+        "//proto/r4/core:datatypes_go_proto",
+        "//proto/stu3:datatypes_go_proto",
+        "//proto/stu3:extensions_go_proto",
         "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_google_go_cmp//cmp:go_default_library",
-        "@com_google_fhir//go/google/fhir/jsonformat/internal/accessor",
-        "@com_google_fhir//go/google/fhir/jsonformat/internal/jsonpbhelper",
-        "@com_google_fhir//proto:annotations_go_proto",
-        "@com_google_fhir//proto/r4:google_extensions_go_proto",
-        "@com_google_fhir//proto/r4/core:datatypes_go_proto",
-        "@com_google_fhir//proto/stu3:datatypes_go_proto",
-        "@com_google_fhir//proto/stu3:extensions_go_proto",
         "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
         "@org_golang_google_protobuf//testing/protocmp:go_default_library",
     ],
@@ -71,23 +71,23 @@ go_test(
     ],
     embed = [":jsonformat"],
     deps = [
+        "//go/google/fhir/jsonformat/internal/jsonpbhelper",
+        "//proto/r4/core:codes_go_proto",
+        "//proto/r4/core:datatypes_go_proto",
+        "//proto/r4/core/resources:bundle_and_contained_resource_go_proto",
+        "//proto/r4/core/resources:code_system_go_proto",
+        "//proto/r4/core/resources:device_go_proto",
+        "//proto/r4/core/resources:observation_go_proto",
+        "//proto/r4/core/resources:patient_go_proto",
+        "//proto/r4/core/resources:research_study_go_proto",
+        "//proto/r4/core/resources:search_parameter_go_proto",
+        "//proto/stu3:codes_go_proto",
+        "//proto/stu3:datatypes_go_proto",
+        "//proto/stu3:metadatatypes_go_proto",
+        "//proto/stu3:resources_go_proto",
         "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_golang_protobuf//ptypes:go_default_library_gen",
         "@com_github_google_go_cmp//cmp:go_default_library",
-        "@com_google_fhir//go/google/fhir/jsonformat/internal/jsonpbhelper",
-        "@com_google_fhir//proto/r4/core:codes_go_proto",
-        "@com_google_fhir//proto/r4/core:datatypes_go_proto",
-        "@com_google_fhir//proto/r4/core/resources:bundle_and_contained_resource_go_proto",
-        "@com_google_fhir//proto/r4/core/resources:code_system_go_proto",
-        "@com_google_fhir//proto/r4/core/resources:device_go_proto",
-        "@com_google_fhir//proto/r4/core/resources:observation_go_proto",
-        "@com_google_fhir//proto/r4/core/resources:patient_go_proto",
-        "@com_google_fhir//proto/r4/core/resources:research_study_go_proto",
-        "@com_google_fhir//proto/r4/core/resources:search_parameter_go_proto",
-        "@com_google_fhir//proto/stu3:codes_go_proto",
-        "@com_google_fhir//proto/stu3:datatypes_go_proto",
-        "@com_google_fhir//proto/stu3:metadatatypes_go_proto",
-        "@com_google_fhir//proto/stu3:resources_go_proto",
         "@org_golang_google_protobuf//types/known/anypb:go_default_library",
     ],
 )
