--- a/go/google/fhir/jsonformat/internal/protopath/BUILD
+++ b/go/google/fhir/jsonformat/internal/protopath/BUILD
@@ -38,10 +38,10 @@ go_test(
     embed = [":protopath"],
     deps = [
         ":protopathtest_go_proto",
+        "//proto/stu3:datatypes_go_proto",
+        "//proto/stu3:resources_go_proto",
         "@com_github_google_go_cmp//cmp:go_default_library",
         "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
-        "@com_google_fhir//proto/stu3:datatypes_go_proto",
-        "@com_google_fhir//proto/stu3:resources_go_proto",
         "@org_golang_google_protobuf//proto:go_default_library",
         "@org_golang_google_protobuf//testing/protocmp:go_default_library",
     ],
