Extracts FhirTypes struct into test util, FhirTestEnv.  This consolidates a lot of type definitions, and allows testing under any Implementation Guide that supports all the resources required by the test.
PiperOrigin-RevId: 318518069

--- a/cc/google/fhir/testutil/BUILD
+++ b/cc/google/fhir/testutil/BUILD
@@ -15,3 +15,17 @@ cc_library(
         "@com_google_protobuf//:protobuf",
     ],
 )
+
+cc_library(
+    name = "fhir_test_env",
+    testonly = 1,
+    hdrs = ["fhir_test_env.h"],
+    strip_include_prefix = "//cc/",
+    deps = [
+        "//cc/google/fhir:primitive_handler",
+        "//cc/google/fhir:util",
+        "//cc/google/fhir/r4:primitive_handler",
+        "//cc/google/fhir/stu3:primitive_handler",
+        "//proto/stu3:resources_cc_proto",
+    ],
+)
