--- a/cc/google/fhir/fhir_path/BUILD
+++ b/cc/google/fhir/fhir_path/BUILD
@@ -55,7 +55,6 @@ cc_library(
         "@com_google_absl//absl/types:optional",
         "@com_google_protobuf//:protobuf",
         "@icu//:common",
-        "@org_tensorflow//tensorflow/core:lib",
     ],
 )
 
@@ -170,17 +169,16 @@ cc_test(
         "//cc/google/fhir:proto_util",
         "//cc/google/fhir/r4:primitive_handler",
         "//cc/google/fhir/status",
+        "//cc/google/fhir/status:statusor",
         "//cc/google/fhir/stu3:primitive_handler",
+        "//cc/google/fhir/testutil:fhir_test_env",
         "//cc/google/fhir/testutil:proto_matchers",
-        "//proto/r4:uscore_cc_proto",
-        "//proto/r4:uscore_codes_cc_proto",
         "//proto/r4/core:codes_cc_proto",
         "//proto/r4/core:datatypes_cc_proto",
         "//proto/r4/core/resources:bundle_and_contained_resource_cc_proto",
         "//proto/r4/core/resources:encounter_cc_proto",
         "//proto/r4/core/resources:medication_knowledge_cc_proto",
         "//proto/r4/core/resources:observation_cc_proto",
-        "//proto/r4/core/resources:organization_cc_proto",
         "//proto/r4/core/resources:parameters_cc_proto",
         "//proto/r4/core/resources:patient_cc_proto",
         "//proto/r4/core/resources:structure_definition_cc_proto",
@@ -210,6 +208,7 @@ cc_test(
         ":r4_fhir_path_validation",
         ":stu3_fhir_path_validation",
         "//cc/google/fhir/status:statusor",
+        "//cc/google/fhir/testutil:fhir_test_env",
         "//proto/r4:uscore_cc_proto",
         "//proto/r4:uscore_codes_cc_proto",
         "//proto/r4/core:datatypes_cc_proto",
@@ -225,7 +224,7 @@ cc_test(
         "//proto/stu3:resources_cc_proto",
         "//proto/stu3:uscore_cc_proto",
         "//proto/stu3:uscore_codes_cc_proto",
-        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/status",
         "@com_google_googletest//:gtest_main",
         "@com_google_protobuf//:protobuf",
     ],
