Add generator for FHIR data to test unknown edge cases and for load tests.
PiperOrigin-RevId: 320291599

--- a/cc/google/fhir/r4/BUILD
+++ b/cc/google/fhir/r4/BUILD
@@ -195,7 +195,9 @@ cc_test(
         ":json_format",
         ":primitive_handler",
         ":profiles",
+        "//cc/google/fhir:proto_util",
         "//cc/google/fhir:test_helper",
+        "//cc/google/fhir/testutil:generator",
         "//cc/google/fhir/testutil:proto_matchers",
         "//proto:annotations_cc_proto",
         "//proto/r4/core:codes_cc_proto",
