Add support for FHIRPath's ConvertsToString(), ConvertsToBoolean(), ConvertsToInteger(), and ToBoolean() functions.
Also, fix bug where primitives that are represented in JSON as strings (e.g. Decimal) may be used as strings without explicit conversion.

PiperOrigin-RevId: 320497915

--- a/cc/google/fhir/fhir_path/BUILD
+++ b/cc/google/fhir/fhir_path/BUILD
@@ -39,10 +39,10 @@ cc_library(
     deps = [
         ":fhir_path_grammar",
         ":fhir_path_lexer",
+        ":fhir_path_types",
         ":utils",
         "//cc/google/fhir:annotations",
         "//cc/google/fhir:primitive_handler",
-        "//cc/google/fhir:primitive_wrapper",
         "//cc/google/fhir:proto_util",
         "//cc/google/fhir:util",
         "//cc/google/fhir/status",
@@ -72,7 +72,6 @@ cc_library(
         ":utils",
         "//cc/google/fhir:annotations",
         "//cc/google/fhir:primitive_handler",
-        "//cc/google/fhir:primitive_wrapper",
         "//cc/google/fhir:proto_util",
         "//cc/google/fhir:util",
         "//cc/google/fhir/status",
