Remove outdated request requirement, add in requests requirement.
PiperOrigin-RevId: 321404490

--- a/examples/bulkdata/BUILD
+++ b/examples/bulkdata/BUILD
@@ -21,6 +21,6 @@ py_binary(
     deps = [
         "@absl_py//absl:app",
         "@absl_py//absl/flags",
-        requirement("request"),
+        requirement("requests"),
     ],
 )
